# Game-in-3-Months

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  collissionTestBed.cpp  main.cpp
.cache/clangd/index/: Test.cpp.3637A87C17CFDB44.idx  Test.cpp.AFADAC046C9D3892.idx  Test.cpp.C3AB72616917604C.idx  Test.h.08FDCD221A360079.idx  Test.h.DA0033BCED82641D.idx  Test.h.FE185BB1320919C0.idx  data_types.cpp.2A7D3D8043D520A4.idx  data_types.hpp.20C0388DB5D157F2.idx  main.cpp.1DF5C009F382F508.idx  main.cpp.887CF419904B51F2.idx  raylib.h.3061FAD79CAB43E5.idx  raylib.h.BB1D9729F05ECB96.idx  raymath.h.DEDBED84510CF268.idx
Engine/: CMakeLists.txt  Engine.h  version.h.in
Engine/src/: core.h
Engine/src/assets/: CMakeLists.txt  particle.hpp  particle_data.hpp  particle_emitter.cpp  particle_emitter.hpp  sprite_manager.cpp  sprite_manager.hpp
Engine/src/core/: CMakeLists.txt  PhysicsEngine.cpp  PhysicsEngine.hpp  entity.hpp  input.hpp  scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp
Engine/src/core/collider/: BoxCollider2D.cpp  BoxCollider2D.hpp  CircleCollider2D.hpp  Collider.hpp  Core_Colliders.hpp
Engine/src/core/collision/: CircleCollider2D.cpp  CircleCollider2D.hpp  Collider.cpp  Collider.hpp
Engine/src/core/graphics/: material.hpp
Engine/src/utilities/: data_types.cpp
res/: boom.m3d
res/shaders/: lighting.frag.glsl  lighting.vert.glsl  lighting_simple.frag.glsl  simple_vert.vert.glsl
src/: core.h
src/assets/: CMakeLists.txt  particle.cpp  particle.hpp  particle_data.hpp  particle_emitter.cpp  particle_emitter.hpp  sprite_manager.cpp  sprite_manager.hpp
src/core/: CMakeLists.txt  PhysicsEngine.cpp  PhysicsEngine.hpp  drawable.hpp  entity.hpp  input.cpp  input.hpp  scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp  sprite_manager.cpp  sprite_manager.hpp
src/core/collision/: BoxCollider2D.cpp  BoxCollider2D.hpp  CircleCollider2D.cpp  CircleCollider2D.hpp  Collider.cpp  Collider.hpp
src/core/graphics/: graphics.cpp  graphics.hpp  lightingMaterial.cpp  lightingMaterial.hpp  material.hpp
src/test/: CMakeLists.txt  Test.cpp  Test.h
src/utilities/: CMakeLists.txt  data_types.cpp  data_types.hpp
